Table fractals {
  id bigint [pk, increment]
  user_id bigint
  created timestamp [not null]
  width integer [not null]
  height integer [not null]
  iteration_count integer [not null]
  symmetry_level integer [not null]
  gamma double [not null]
  image text

  indexes {
    user_id [name: "fractals_user_id_idx"]
  }
}

Table functions {
  id bigint [pk, increment]
  name text [not null]
  fractal_id bigint [not null]
  weight double [not null]

  indexes {
    fractal_id [name: "functions_fractal_id_idx"]
  }
}

Table affine_params {
  id bigint [pk, increment]
  fractal_id bigint [not null]
  color varchar(7) [not null]
  a double [not null]
  b double [not null]
  c double [not null]
  d double [not null]
  e double [not null]
  f double [not null]

  indexes {
    fractal_id [name: "affine_params_fractal_id_idx"]
  }
}

Ref: functions.fractal_id > fractals.id [delete: cascade]
Ref: affine_params.fractal_id > fractals.id [delete: cascade]